[tool.poetry]
name = "qt_answers"
version = "0.1.0"
description = ""
authors = ["Nir <88795475+nrbnlulu@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide2 = "^5.15.2"
PyQt6 = "^6.3.1"
PySide6 = "^6.3.1"
pandas = "^1.4.3"
xlrd = "^2.0.1"
opencv-python = "^4.6.0"
pyzbar = "^0.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
